logs/dag_id=django_etl_monitor/run_id=manual__2025-06-24T100644.348767+0000/task_id=run_etl_from_django/attempt=1.log
[2025-06-24T10:06:45.408+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: django_etl_monitor.run_etl_from_django manual__2025-06-24T10:06:44.348767+00:00 [queued]>
[2025-06-24T10:06:45.434+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: django_etl_monitor.run_etl_from_django manual__2025-06-24T10:06:44.348767+00:00 [queued]>
[2025-06-24T10:06:45.435+0000] {taskinstance.py:2193} INFO - Starting attempt 1 of 1
[2025-06-24T10:06:45.472+0000] {taskinstance.py:2214} INFO - Executing <Task(PythonOperator): run_etl_from_django> on 2025-06-24 10:06:44.348767+00:00
[2025-06-24T10:06:45.485+0000] {standard_task_runner.py:60} INFO - Started process 66 to run task
[2025-06-24T10:06:45.495+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'django_etl_monitor', 'run_etl_from_django', 'manual__2025-06-24T10:06:44.348767+00:00', '--job-id', '82', '--raw', '--subdir', 'DAGS_FOLDER/django_etl_monitor.py', '--cfg-path', '/tmp/tmpgabvhuho']
[2025-06-24T10:06:45.499+0000] {standard_task_runner.py:88} INFO - Job 82: Subtask run_etl_from_django
[2025-06-24T10:06:45.703+0000] {task_command.py:423} INFO - Running <TaskInstance: django_etl_monitor.run_etl_from_django manual__2025-06-24T10:06:44.348767+00:00 [running]> on host 78d664e26a7a
[2025-06-24T10:06:45.946+0000] {taskinstance.py:2510} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='django_etl_monitor' AIRFLOW_CTX_TASK_ID='run_etl_from_django' AIRFLOW_CTX_EXECUTION_DATE='2025-06-24T10:06:44.348767+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-06-24T10:06:44.348767+00:00'
[2025-06-24T10:06:46.072+0000] {taskinstance.py:2728} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 200, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 217, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/django_etl_monitor.py", line 73, in run_etl_from_conf
    cur.execute(f"SELECT {', '.join(select_clause)} FROM {source_table}")
psycopg2.errors.SyntaxError: syntax error at or near ">"
LINE 1: SELECT UPPER(name) AS name, >40 AS age FROM source_data
                                    ^

[2025-06-24T10:06:46.110+0000] {taskinstance.py:1149} INFO - Marking task as FAILED. dag_id=django_etl_monitor, task_id=run_etl_from_django, execution_date=20250624T100644, start_date=20250624T100645, end_date=20250624T100646
[2025-06-24T10:06:46.150+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 82 for task run_etl_from_django (syntax error at or near ">"
LINE 1: SELECT UPPER(name) AS name, >40 AS age FROM source_data
                                    ^
; 66)
[2025-06-24T10:06:46.197+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-06-24T10:06:46.238+0000] {taskinstance.py:3309} INFO - 0 downstream tasks scheduled from follow-on schedule check
